# Chess-Bot_Engine

./: CMakeLists.txt  CMakeSettings.json  Move.h  MoveGenerator.cpp  MoveGenerator.h  README.md  attack_rays.h  bitboard_masks.h  board.cpp  board.h  constants.h  engine.cpp  engine.h  evaluation.cpp  evaluation.h  exceptions.h  generator.cpp  main.cpp  notation_utils.cpp  notation_utils.h  pst.h  utils.h  zobrist.cpp  zobrist.h
data/: attacks_data.txt
include/: Move.h  MoveGenerator.h  SPSA_parameters.h  Squares.h  adjustable_parameters.h  adjustable_parameters_old.h  adjustable_parameters_old2.h  attack_rays.h  bishop_tables.h  bitboard_masks.h  board.h  constants.h  engine.h  evaluation.h  exceptions.h  notation_utils.h  prepare_data.h  pst.h  pst_old.h  see.h  uci_helpers.h  utils.h  zobrist.h
scripts/: build_pi.sh  install_deps_pi.sh
src/: MoveGenerator.cpp  board.cpp  engine.cpp  evaluation.cpp  generator.cpp  main.cpp  notation_utils.cpp  uci.cpp  zobrist.cpp
